# template-helper

./: .gitignore  .stylish-haskell.yaml  default.nix  language-haskell-extract.cabal  shell.nix
src/Language/Haskell/: Extract.hs
test/: Test.hs
